--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
-<h1>Hello, World!</h1>
-<p>color test: <strong>bold</strong> and <em>italic</em>text</p>
-<div>first box<strong>bold</strong>text</div>
-<div>second box <em>italic</em>text</div>
-<p><button>aimbot</button> left click</p>
-<p><button>visuals</button> ud wallhack</p>
+<h1>rendering debug menu</h1>
+<h1>rendering debug menu</h1>
+
+<p>color test: <strong>bold</strong> and <em>italic</em> text</p>
+<div>first box<strong>bold</strong> text</div>
+<div>second box<em>italic</em> text</div>
+<div>third box<em>italic</em> text</div>
+<p><combo>2D Cornered|Normal Box|idk lol</combo> Box Type</p>
+<p><combo>2D Cornered|Normal Box|idk lol</combo> skeleton Type</p>
 <p><slider></slider> distance</p>
-<p><slider></slider> distance</p>
+<p><slider></slider> fov</p>
